syntax = "proto3";

package goten.annotations;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/cloudwan/goten-sdk/annotations/multi_region";
option java_multiple_files = true;
option java_outer_classname = "GotenProtoMultiRegion";
option java_package = "com.ntt.goten.annotations.multi_region";

// Region is a scope attribute annotation that should be added to each resource
// that is supposed to be regional. With this, goten will add region segment to
// the owning resource each name pattern.
message Region {
}

// SyncingOpts is attachable to goten resource and carries additional
// information how resource is synced across regions.
message SyncingOpts {
  // Synchronization type indicates where resources of given type are synced.
  Type type = 1;

  enum Type {
    // DEFAULT indicates, that resource is synced according to policy and its
    // rules if it is a subject of policy. Otherwise, it is synced always to all
    // possible regions (ALWAYS_GLOBALLY).
    DEFAULT = 0;

    // ALWAYS_IN_SCOPE indicates that resource is always synced across all regions according
    // to MultiRegionPolicy of the parent (enabled regions). If resource is not
    // subject to MultiRegionPolicy, it is synced to all regions globally (same as
    // ALWAYS_GLOBALLY).
    ALWAYS_IN_SCOPE = 1;

    // NEVER indicates that resource never is synced outside its owning region.
    // Only resources that are subject to policies can be never synced.
    NEVER = 2;

    // ALWAYS_GLOBALLY indicates that resource ignores MultiRegionPolicy of parent
    // and is synced always globally, to all regions supported by service.
    ALWAYS_GLOBALLY = 3;
  }
}

// RoutingSpec is attachable to method and provides routing information for it.
// It is generally generated by bootstrap based on api skeleton code.
message RoutingSpec {
  // If true, goten will omit multi-region code-generation for given method. It
  // can be used when its known that method does not need to be routed or if
  // developer needs to write custom code manually.
  // If this option is set, other fields are ignored.
  bool skip_code_gen_based_routing = 1;

  // Informs goten code-gen that given method can only be executed on region
  // owning resource on each method operates. Its typically used for write requests.
  bool execute_on_owning_region = 2;

  // List of field paths in a request containing resource scope - reference
  // to resource which contains multi-region Policy object in its schema.
  // Routing mechanisms gets scoping resource, extracts Policy object and
  // having it, makes decision whether request can be executed locally, or
  // whether it should be routed somewhere else, or maybe if it should be
  // splitted across many regions.
  // This field is used only for methods operating on collection of
  // resources and if region_id_field_paths is not provided (has higher
  // priority).
  // If not provided, then Goten will look into request_paths annotation
  // in the method protobuf definition. If this is missing and defaults
  // cannot be deduced, error will be raised.
  // Because request can use oneof and contain many potential field
  // paths, this field is an array. However, routing mechanism picks only
  // first populated value.
  repeated string scope_field_paths = 3;

  // List of field paths in a request which contain reference/name to a resource
  // on which method operates. Routing mechanisms determines what is the
  // ancestor holding multi-region Policy for given reference (if exists) and
  // eventually determines if request should be routed or executed locally.
  // This field is used only for methods operating on single resources and if
  // region_id_field_paths is not provided (has higher priority).
  // If not provided, then Goten will look into request_paths annotation
  // in the method protobuf definition. If this is missing and defaults
  // cannot be deduced, error will be raised.
  // Because request can use oneof and contain many potential field
  // paths, this field is an array. However, routing mechanism picks only
  // first populated value.
  repeated string resource_field_paths = 4;

  // List of field paths in a request containing exact region ID where
  // request should be routed. This mechanism can be used if routing cannot
  // be decided easier using scope or resource name/ref, but should be generally
  // avoided.
  repeated string region_id_field_paths = 5;
}

extend google.protobuf.MethodOptions {
  // Routing specification for this method.
  RoutingSpec multi_region_routing = 79041;
}

extend google.protobuf.MessageOptions {
  SyncingOpts syncing_opts = 69100;
}
